css/main.scss
* {
	font-weight: 300;
	transition: color 0.7s;
}

a { weight: 600; }

h1, h2, h3 {
	font-family: 'Open Sans', sans-serif !important;
	font-weight: 300;
	text-align: center;
}

header {
	background-color: #000;
	background-image: url('../img/header.jpg');
	background-size: cover;
	color: #FFF;
	padding: 150px 60px;

	h1 {
		margin-bottom: 	0;
		span { font-weight: 600 }
		text-shadow: 0 0 1px #000;
	}
	h4 { font-size: 1em; text-align: center; }

	.button-group {
		text-align: center;

		li { 
			display: inline-block;
			font-size: 2rem; 
			font-weight: 600;
		}
	}

	@media (max-width: 640px) {
		padding: 60px;
	}
}

.container {
	background: #FAFAFA;
	padding: 30px 0 30px;

	h4 { 
		font-size: 3.5rem;
		@media (max-width: 640px) {
			font-size: 2rem;
		}
	}
	& > p { 
		font-size: 1.5rem; 
		@media (max-width: 640px) {
			font-size: 1rem;
		}
	}

	h4, & > p {
		margin: 2rem auto; 
		text-align: center;
		width: 90%;
	}

	section {
		background: #FFF;
		border-radius: 5px;
		border: 1px solid #c2c2c2;
		margin:  30px auto;
		padding: 40px 20px;
		width: 80%;

		h2 { 
			margin-bottom: 1.5rem;
			
			@media (max-width: 640px) {
				font-size: 2rem;
			}
		}
		h3 {
			font-size: 1.8rem;
			color: #2199E8;
			font-weight: 300;
		}

		h4 {
			color: #555;
			font-size: 1em;
			font-weight: 600;
			margin: 1rem 0;
			text-align:left;
		}

		.row {
			div {
				text-align: left;
			}
		}

		li {
			a { 
				color: #222; 

				&:hover {
					color: #009;
				}

				&:visited {
					color: #228
				}		
			}
		}
	}
}

$azul: #4EAEED;

footer {
	color: #FFF;
	background: $azul;
	font-size: 0.7rem;
	padding: 10px;
	border: 1px solid #0090FF;
	text-align: center;

	a, a:visited {
		color: #DDDDFF;
		font-weight: 600;
		&:hover {
			color: #FFF;
			text-shadow: 0 0 1px #AAA;
		}
	}
}

